--- a/pigskin/pigskin.vcxproj.filters
+++ b/pigskin/pigskin.vcxproj.filters
@@ -1,36 +1,31 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Source Files">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
+    <Filter Include="pigskin">
+      <UniqueIdentifier>{7A9CB0AD-E67B-2F49-EF93-BA1F5BF295AA}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
-    </Filter>
-    <Filter Include="Resource Files">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
-    </Filter>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="src\PigSkin.h" />
+    <ClInclude Include="src\pigskin\Application.h">
+      <Filter>pigskin</Filter>
+    </ClInclude>
+    <ClInclude Include="src\pigskin\Core.h">
+      <Filter>pigskin</Filter>
+    </ClInclude>
+    <ClInclude Include="src\pigskin\EntryPoint.h">
+      <Filter>pigskin</Filter>
+    </ClInclude>
+    <ClInclude Include="src\pigskin\Log.h">
+      <Filter>pigskin</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\pigskin\Application.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>pigskin</Filter>
     </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="src\pigskin\Application.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\pigskin\Core.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\PigSkin.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\pigskin\EntryPoint.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
+    <ClCompile Include="src\pigskin\Log.cpp">
+      <Filter>pigskin</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
